[gd_scene load_steps=19 format=3 uid="uid://cxu6iear8ifdr"]

[ext_resource type="FontFile" uid="uid://im85rm1hu4m8" path="res://data/assets/general/art/PoetsenOne-Regular.ttf" id="1_ku22t"]
[ext_resource type="Script" uid="uid://dy4t7iexoikal" path="res://src/realdate/color_select.gd" id="1_sgf27"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wtcdt"]
bg_color = Color(0.00958908, 0.32384, 0.047109, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_21483"]
bg_color = Color(0.0588235, 0.996078, 0.219608, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dobye"]
bg_color = Color(0.363037, 0.00256025, 0.00439715, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ku22t"]
bg_color = Color(0.996078, 0.0588235, 0.0588235, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ek0u"]
bg_color = Color(0.0248828, 0.00245703, 0.4197, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sgf27"]
bg_color = Color(0.117647, 0.0588235, 0.996078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kgtqd"]
bg_color = Color(0.55787, 0.191048, 0.00291205, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e6tv7"]
bg_color = Color(0.996078, 0.376471, 0.0588235, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_63yak"]
bg_color = Color(0.00247385, 0.351028, 0.447254, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tb46w"]
bg_color = Color(0.0588235, 0.796078, 0.996078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7rfyd"]
bg_color = Color(0.3625, 0.000619659, 0.255967, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sai8s"]
bg_color = Color(0.996078, 0.0588235, 0.729412, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s1mr5"]
bg_color = Color(0.301321, 0.0056827, 0.65043, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ru6jw"]
bg_color = Color(0.478431, 0.0588235, 0.996078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0vmdy"]
bg_color = Color(0.589651, 0.619896, 0.000951064, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hyr0i"]
bg_color = Color(0.94902, 0.996078, 0.0588235, 1)

[node name="ColorSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -716.0
offset_bottom = -1062.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sgf27")

[node name="Green" type="Button" parent="."]
layout_mode = 0
offset_left = 135.0
offset_top = 45.0
offset_right = 180.0
offset_bottom = 90.0
theme_override_styles/hover = SubResource("StyleBoxFlat_wtcdt")
theme_override_styles/normal = SubResource("StyleBoxFlat_21483")

[node name="Red" type="Button" parent="."]
layout_mode = 0
offset_left = 135.0
offset_right = 180.0
offset_bottom = 45.0
theme_override_styles/hover = SubResource("StyleBoxFlat_dobye")
theme_override_styles/normal = SubResource("StyleBoxFlat_ku22t")

[node name="Blue" type="Button" parent="."]
layout_mode = 0
offset_left = 90.0
offset_top = 45.0
offset_right = 135.0
offset_bottom = 90.0
theme_override_styles/hover = SubResource("StyleBoxFlat_2ek0u")
theme_override_styles/normal = SubResource("StyleBoxFlat_sgf27")

[node name="Orange" type="Button" parent="."]
layout_mode = 0
offset_left = 90.0
offset_right = 135.0
offset_bottom = 45.0
theme_override_styles/hover = SubResource("StyleBoxFlat_kgtqd")
theme_override_styles/normal = SubResource("StyleBoxFlat_e6tv7")

[node name="Teal" type="Button" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 45.0
offset_right = 90.0
offset_bottom = 90.0
theme_override_styles/hover = SubResource("StyleBoxFlat_63yak")
theme_override_styles/normal = SubResource("StyleBoxFlat_tb46w")

[node name="Pink" type="Button" parent="."]
layout_mode = 0
offset_top = 45.0
offset_right = 45.0
offset_bottom = 90.0
theme_override_styles/hover = SubResource("StyleBoxFlat_7rfyd")
theme_override_styles/normal = SubResource("StyleBoxFlat_sai8s")

[node name="Purple" type="Button" parent="."]
layout_mode = 0
offset_left = 45.0
offset_right = 90.0
offset_bottom = 45.0
theme_override_styles/hover = SubResource("StyleBoxFlat_s1mr5")
theme_override_styles/normal = SubResource("StyleBoxFlat_ru6jw")

[node name="Yellow" type="Button" parent="."]
layout_mode = 0
offset_right = 45.0
offset_bottom = 45.0
theme_override_styles/hover = SubResource("StyleBoxFlat_0vmdy")
theme_override_styles/normal = SubResource("StyleBoxFlat_hyr0i")

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_top = -23.0
offset_right = 180.0
theme_override_fonts/font = ExtResource("1_ku22t")
text = "Select Color For: #1"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Green" to="." method="_on_green_pressed"]
[connection signal="pressed" from="Red" to="." method="_on_red_pressed"]
[connection signal="pressed" from="Blue" to="." method="_on_blue_pressed"]
[connection signal="pressed" from="Orange" to="." method="_on_orange_pressed"]
[connection signal="pressed" from="Teal" to="." method="_on_teal_pressed"]
[connection signal="pressed" from="Pink" to="." method="_on_pink_pressed"]
[connection signal="pressed" from="Purple" to="." method="_on_purple_pressed"]
[connection signal="pressed" from="Yellow" to="." method="_on_yellow_pressed"]
